k8s/apps/coder/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: coder
  namespace: coder
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`coder.zaman.lol`)
      kind: Rule
      services:
        - name: coder
          port: 80
  tls:
    certResolver: cloudflare
